libSieve 2.2.7
--------------

- Fixed a duplicate symbol definition (thanks to Wilfried Goesgens).

- Fixed a mismatched function declaration (thanks to Eugene Prokopiev).

libSieve 2.2.6
--------------

- Fix for bracketed comments (thanks to Daniel Shahaf).

- More graceful handling of malformed addresses (thanks to Paul Stevens).

- Return header and address errors separately from script parse errors.

libSieve 2.2.5
--------------

- Allowed CFLAGS to pass through Makefile.am
  (thanks to Bernard Johnson).

- Use # instead of __STRING for assertion stringification.

- Fixed off-by-one when reallocing space for repeated headers
  (thanks to Petri Laine).

libSieve 2.2.4
--------------

- Improved several test scripts.

- Fixed a memory leak in header parsing.

- Fixed a memory leak in comparator lookup.

- Accepted patch from Steffen Schuetz to respect :from in vacation action.

libSieve 2.2.3
--------------

- Numeric relational comparators were backwards.

libSieve 2.2.2
--------------

- Added more test scripts.

- Added support for RFC 3431 Relational comparators.

- Fixed segfault when parsing group syntax with empty address list.

libSieve 2.2.1
--------------

- Removed accidental dependency on Check.

- Added exception handling system.

- Added test runner scripts to sv_test.

libSieve 2.2.0
--------------

- Updated top-level README.

- Fixed address test not working.

- Fixed innocuous yet annoying GCC 4 warnings.

libSieve 2.1.13
---------------

- Fixed capabilities missingspaces.

- Fixed alloca.h in vasnprintf for FreeBSD.

libSieve 2.1.12
---------------

- Fixed namespace issue with vasnprintf.

libSieve 2.1.11
---------------

- Minor fixes to build with flex 2.5.33.

- Updated to Vacation draft 6.

- Updated to imap4flags.

- Dropped support for imapflags.

- Added callback for subaddress rather than
  using a hardcoded user+mailbox format.

- Added a callback for debug messages.

- Regex is always built in now.
