@@ -1,8 +1,12 @@
-AUTOMAKE_OPTIONS	= foreign
+AUTOMAKE_OPTIONS        = foreign
 
-SUBDIRS			= sv_parser sv_regex sv_interface sv_util . sv_test sv_include
+EXTRA_DIST              = libsieve.pc.in
+pkgconfigdir            = $(libdir)/pkgconfig
+pkgconfig_DATA          = libsieve.pc
 
-CFLAGS			= @CFLAGS@ -Wall -I$(top_srcdir)/sv_util -I$(top_srcdir)/sv_parser -I$(top_srcdir)/sv_interface -I$(top_srcdir)/sv_regex -I$(top_srcdir)/sv_include -g
+SUBDIRS                 = sv_parser sv_regex sv_interface sv_util . sv_test sv_include
+
+CFLAGS                  = @CFLAGS@ -Wall -I$(top_srcdir)/sv_util -I$(top_srcdir)/sv_parser -I$(top_srcdir)/sv_interface -I$(top_srcdir)/sv_regex -I$(top_srcdir)/sv_include -g
 
 lib_LTLIBRARIES         = libsieve.la
 libsieve_la_SOURCES     = sv_empty.c
